[project]
name = "fitness-controller-pro"
version = "0.1.0"
description = "Fitness Controller PRO Telegram Bot"
requires-python = ">=3.13"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

ignore_missing_imports = true

strict_optional = true

pretty = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]

addopts = "-v"
